# co-intel

./: .env.example  .gitignore  GITHUB_SETUP.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: ai_agents.py  auth.py  documents.py  organizations.py  projects.py
backend/app/core/: config.py  database.py
backend/app/services/: ai_service.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/components/ai/: CopilotDemo.tsx
frontend/src/components/ui/: Button.tsx
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
