[project]
name = "knowledge-workspace-backend"
version = "0.1.0"
description = "Knowledge Workspace Platform - Backend API"
authors = [
    {name = "Knowledge Workspace Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # FastAPI and core dependencies
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    
    # Database
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "alembic==1.13.1",
    
    # Supabase
    "supabase==2.3.0",
    "postgrest==0.13.0",
    
    # Authentication & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    
    # Configuration & Environment
    "pydantic[email]==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    
    # Redis for caching
    "redis==5.0.1",
    "hiredis==2.2.3",
    
    # HTTP client
    "httpx==0.25.2",
    
    # AI/ML libraries
    "openai==1.3.7",
    "anthropic==0.7.7",
    "pydantic-ai==0.0.14",
    
    # Utilities
    "python-slugify==8.0.1",
    "email-validator==2.1.0",
    
    # Optional: For file processing
    "python-magic==0.4.27",
    "Pillow==10.1.0",
]

[project.optional-dependencies]
dev = [
    # Development dependencies
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "supabase.*",
    "postgrest.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
